<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".BackupViewActivity">
    <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/myactionbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp">

        <TextView
                android:text="Backup/ Restore"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

    </android.support.v7.widget.Toolbar>

    <Button
            android:text="@string/menuBackupData"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:onClick="backupData"/>
    <Button
            android:text="@string/menuRestoreData"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:onClick="restoreData"/>
    <!--<Button
            android:text="@string/menuClearTesting"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:onClick="clearTesting"/>-->
    <Button
            android:text="@string/menuClearAll"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"  android:onClick="clearAll"/>
</LinearLayout>